fix(be): 서브 도메인 설정 - 프론트, 백 분리